# Parkinsons_Variant_Viewer

./: .gitignore  environment.yml  init_db.py  load_vcfs.py  pyproject.toml  requirements.txt
src/parkinsons_variant_viewer/: clinvar_api.py  hgvs_variant.py  main.py
src/parkinsons_variant_viewer/utils/: logger.py
src/parkinsons_variant_viewer/web/: __init__.py  db.py  routes.py  schema.sql
src/parkinsons_variant_viewer/web/loaders/: vcf_loader.py
src/parkinsons_variant_viewer/web/templates/: add_variant.html  inputs.html  variants.html
tests/: test_hgvs_variant.py  test_vcf_loader.py
